--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A central location for handmade crafters to gather, to share and inspire others, and to be creative with other projects as a springboard",
   "main": "index.js",
   "scripts": {
-  "start": "cd client && npm install && npm run build --prod && cd .. && npm install && node app.js",
+    "start": "cd client && npm install && npm run build --prod && cd .. && npm install && node app.js",
     "dev": "nodemon app.js",
-    "test": "mocha --timeout 10000"
+    "test": "npx playwright test",
+    "testUI": "npx playwright test --ui"
   },
   "author": "Shanmuga Ganesh",
   "license": "ISC",
@@ -16,7 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.1",
+    "mongoose": "^8.5.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "react-modal": "^3.16.1",
@@ -24,6 +25,8 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.45.3",
+    "@types/node": "^22.1.0",
     "@types/react-modal": "^3.16.3",
     "css-loader": "^7.1.2",
     "nodemon": "^3.1.4",
